2005-10-03  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update for 2.12.1.

2005-10-02  Sebastien Bacher  <seb128@debian.org>

	* NEWS: update for 2.12.1.

2005-09-26  Brian Cameron  <Brian.Cameron@sun.com>

	* configure.in: Fix xcursor test so that it doesn't
	  cause configure to crash if the xcursor extension
	  can't be found.  Instead just build without xcursor
	  support.

2005-09-24  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: added "ku" (Kurdish) to ALL_LINGUAS

2005-09-14  Ray Strode  <rstrode@redhat.com>

	* configure.in: previous patch breaks
	the build, just revert for now, bug 316142.

2005-09-12  Ray Strode  <rstrode@redhat.com>

	* configure.in: add check for xinput extension, needed
	for bug 314409.

2005-09-04  Sebastien Bacher  <seb128@debian.org>

	* NEWS: update for 2.12.0

2005-08-24  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in, Makefile.am, capplets/keyboard/Makefile.am:
	fixing #313368, no more pangoxft

2005-08-22  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.12.0.

==================== 2.11.92 ===================	

2005-08-22  Christian Persch  <chpe@cvs.gnome.org>

	* capplets/Makefile.am: Fix distcheck.

2005-08-22  Sebastien Bacher  <seb128@debian.org>

	* NEWS: update for 2.11.92

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Simply enable-aboutme check, and fix
	configure output.

2005-08-21  Sebastien Bacher  <seb128@debian.org>

	* configure.in: fix the --enable-aboutme configure option,
	patch by Ray Strode <rstrode@redhat.com> (Closes: #313121).

2005-08-14  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in, libkbdraw/Makefile.am, capplets/keyboard/Makefile.am:
	fixing #313368

2005-08-10  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.92

==================== 2.11.91 ===================
	
2005-08-10  Sebastien Bacher  <seb128@debian.org>

	* NEWS: update for 2.11.91.

2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
